fix syntax for constraints in Gaussian files